# postproc

./: .gitignore  LICENSE  README.md
data/: README.md
kurtsplice/: pyproject.toml
kurtsplice/src/kurtsplice/: cli.py
kurtsplice/tests/: test_kurtsplice.py
postproc_common/: pyproject.toml
postproc_common/src/postproc_common/: configio.py  discovery.py  kurtio.py  metadata.py
postproc_common/tests/: test_configio.py  test_discovery.py  test_kurtio.py  test_metadata.py  test_postproc_common.py
rfiperf/: pyproject.toml
rfiperf/src/rfiperf/: bestprof.py  cli.py  kurtosis.py  plotting.py
rfiperf/tests/: test_kurtosis.py  test_rfiperf.py  test_snr.py
