[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kurtsplice"
version = "0.1.0"
description = "CLI tool to concatenate ATA kurtosismask.bin files"
requires-python = ">=3.10"
dependencies = [
    "postproc-common",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
kurtsplice = "kurtsplice.cli:main"