[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rfiperf"
version = "0.1.0"
description = "RFI performance analysis tools for ATA data"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
    "postproc-common",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
rfiperf = "rfiperf.cli:main"